WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120472
VM::throwException() crashes reproducibly in testapi with !ENABLE(JIT)
https://bugs.webkit.org/show_bug.cgi?id=120472
Summary
VM::throwException() crashes reproducibly in testapi with !ENABLE(JIT)
Chris Curtis
Reported
2013-08-29 08:26:47 PDT
When the JIT is disabled, interpreterThrowInCaller does not handle the exception throw correctly.
Attachments
patch
(9.03 KB, patch)
2013-08-29 08:47 PDT
,
Chris Curtis
chris_curtis
: review-
chris_curtis
: commit-queue-
Details
Formatted Diff
Diff
patch 2
(10.24 KB, patch)
2013-08-29 09:23 PDT
,
Chris Curtis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Curtis
Comment 1
2013-08-29 08:47:41 PDT
Created
attachment 209987
[details]
patch
Chris Curtis
Comment 2
2013-08-29 08:58:11 PDT
Comment on
attachment 209987
[details]
patch a layout test result changed. Running additional check to confirm will upload new patch soon
Chris Curtis
Comment 3
2013-08-29 09:23:40 PDT
Created
attachment 209991
[details]
patch 2 added error was caught in layout test.
Alexey Proskuryakov
Comment 4
2013-08-29 09:53:37 PDT
Is this a mistake in the layout test that setCaptionDisplayMode is not present?
WebKit Commit Bot
Comment 5
2013-08-29 10:02:30 PDT
Comment on
attachment 209991
[details]
patch 2 Clearing flags on attachment: 209991 Committed
r154817
: <
http://trac.webkit.org/changeset/154817
>
WebKit Commit Bot
Comment 6
2013-08-29 10:02:32 PDT
All reviewed patches have been landed. Closing bug.
Chris Curtis
Comment 7
2013-08-29 10:52:16 PDT
(In reply to
comment #4
)
> Is this a mistake in the layout test that setCaptionDisplayMode is not present?
I thought so as well, but running the test through chrome and Firfox recieves the same error.
Eric Carlson
Comment 8
2013-08-29 11:13:11 PDT
(In reply to
comment #7
)
> (In reply to
comment #4
) > > Is this a mistake in the layout test that setCaptionDisplayMode is not present? > > I thought so as well, but running the test through chrome and Firfox recieves the same error.
It was a bug in the test which was fixed earlier this morning in
http://trac.webkit.org/changeset/154815
.
Chris Curtis
Comment 9
2013-08-29 17:24:06 PDT
(In reply to
comment #8
)
> (In reply to
comment #7
) > > (In reply to
comment #4
) > > > Is this a mistake in the layout test that setCaptionDisplayMode is not present? > > > > I thought so as well, but running the test through chrome and Firfox recieves the same error. > > It was a bug in the test which was fixed earlier this morning in
http://trac.webkit.org/changeset/154815
.
yes, it looks like both patches were going in at the same time. Im not sure how to adjust for this if anything. If further action is required on my part let me know. Thanks
Eric Carlson
Comment 10
2013-08-29 17:34:19 PDT
(In reply to
comment #9
)
> (In reply to
comment #8
) > > (In reply to
comment #7
) > > > (In reply to
comment #4
) > > > > Is this a mistake in the layout test that setCaptionDisplayMode is not present? > > > > > > I thought so as well, but running the test through chrome and Firfox recieves the same error. > > > > It was a bug in the test which was fixed earlier this morning in
http://trac.webkit.org/changeset/154815
. > > yes, it looks like both patches were going in at the same time. Im not sure how to adjust for this if anything.
Next time you might ping someone that knows the area (me, jer.noble), or file a bug instead of just blindly checking in obviously failing results.
> If further action is required on my part let me know. Thanks
Dino fixed the results earlier this morning.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug